Updated Overlay Basis dependency 0.0.4 -> 0.1.*

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modal-basis",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "Simple modal component",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/sergemazille/modal-basis#readme",
   "dependencies": {
-    "overlay-basis": "0.0.4"
+    "overlay-basis": "0.1.*"
   },
   "devDependencies": {}
 }
